--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "test",
     "start": "node_modules/.bin/webpack-dev-server",
-    "lint": "node_modules/.bin/eslint src/** src/**/**; exit 0",
-    "fix": "eslint src/** src/**/** --fix; exit 0"
+    "lint": "eslint src/components/**; exit 0",
+    "fix": "eslint src/components/**; --fix; exit 0"
   },
   "repository": {
     "type": "git",
@@ -24,14 +24,16 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.0.0",
-    "styled-jsx": "^3.2.1"
+    "styled-jsx": "^3.2.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.13.1",
+    "eslint": "^5.13.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^1.1.6",
