--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.29.0",
+    "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "url-loader": "^0.6.2",
-    "webpack": "^3.4.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   }
 }
