--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.0.0",
+    "redux": "^4.0.1",
     "styled-jsx": "^3.2.1",
     "uuid": "^3.2.1"
   },
